[gd_scene load_steps=2 format=3 uid="uid://eh0hfv6wp4g2"]

[ext_resource type="Script" path="res://Myassets/Scenes/MainScene/mainscene.gd" id="1_bcrcj"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_bcrcj")

[node name="Button" type="Button" parent="."]
offset_left = 527.0
offset_top = 479.0
offset_right = 681.0
offset_bottom = 532.0
text = "JUGAR"

[node name="Button2" type="Button" parent="."]
offset_left = 852.0
offset_top = 163.0
offset_right = 1049.0
offset_bottom = 208.0
text = "LOGIN"

[node name="apiEstatus" type="Label" parent="."]
offset_left = 958.0
offset_top = 95.0
offset_right = 1109.0
offset_bottom = 123.0
text = "CONNECTED: FALSE"

[node name="Label" type="Label" parent="."]
offset_left = 820.0
offset_top = 95.0
offset_right = 937.0
offset_bottom = 123.0
text = "LOGIN: FALSE"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(580, 320)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
